objects/PROSAgreement__MPCI__c.object
<CustomObject>
    <fields>
        <fullName>PROSAgreement__AccountName__c</fullName>
        <formula>PROSAgreement__Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PROS Mass Price Change Items</relationshipLabel>
        <relationshipName>PROS_Mass_Price_Change_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementRecordName__c</fullName>
        <formula>PROSAgreement__AgreementRecord_Id__r.Name</formula>
        <label>Agreement Record Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementRecord_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Record</label>
        <referenceTo>PROSAgreement__Agreement__c</referenceTo>
        <relationshipLabel>PROS Mass Price Change Items</relationshipLabel>
        <relationshipName>PROS_Mass_Price_Change_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Agreement_Action_Status__c</fullName>
        <label>Agreement Action Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Agreement_Action__c</fullName>
        <label>Agreement Action</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Agreement_Changeset_Id__c</fullName>
        <label>Agreement Changeset Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Agreement_Error__c</fullName>
        <label>Agreement Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Amendment_Date__c</fullName>
        <label>Amendment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__ContractName__c</fullName>
        <formula>PROSAgreement__Contract__r.Name</formula>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>PROS Mass Price Change Items</relationshipLabel>
        <relationshipName>PROS_Mass_Price_Change_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__DecisionType__c</fullName>
        <label>Decision Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__ExternalQuoteId__c</fullName>
        <label>External Quote</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__External_Agreement_Id__c</fullName>
        <label>Agreement Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__MassPriceChange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PROS Mass Price Change</label>
        <referenceTo>PROSAgreement__MPC__c</referenceTo>
        <relationshipLabel>PROS Mass Price Change Items</relationshipLabel>
        <relationshipName>PROS_Mass_Price_Change_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Quote_Name__c</fullName>
        <formula>PROSAgreement__QxQuote__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__QxQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PROS Quote</label>
        <referenceTo>CameleonCPQ__QxQuote__c</referenceTo>
        <relationshipLabel>PROS Mass Price Change Items</relationshipLabel>
        <relationshipName>PROS_Mass_Price_Change_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Reason__c</fullName>
        <label>Reject Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Status__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PROS Agreement Mass Price Change Item</label>
    <listViews>
        <fullName>PROSAgreement__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PROS Mass Price Change Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Agreement Mass Price Change Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PROSAgreement__Validate_Agreement_Action_Name</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(PROSAgreement__Agreement_Action__c  = &quot;&quot;,
LOWER(PROSAgreement__Agreement_Action__c)  = &quot;accept&quot;,
LOWER(PROSAgreement__Agreement_Action__c)  = &quot;reject&quot;,
LOWER(PROSAgreement__Agreement_Action__c)  = &quot;amend&quot;,
LOWER(PROSAgreement__Agreement_Action__c)  = &quot;generatedocument&quot;))</errorConditionFormula>
        <errorDisplayField>PROSAgreement__Agreement_Action__c</errorDisplayField>
        <errorMessage>Agreement Action Name is not valid. 
Allowed Action Names: accept, reject, amend and generateDocument.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PROSAgreement__Validate_Agreement_Action_Status</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(PROSAgreement__Agreement_Action_Status__c  = &quot;&quot;,
LOWER(PROSAgreement__Agreement_Action_Status__c)  = &quot;start&quot;,
LOWER(PROSAgreement__Agreement_Action_Status__c)  = &quot;success&quot;,
LOWER(PROSAgreement__Agreement_Action_Status__c)  = &quot;failure&quot;))</errorConditionFormula>
        <errorDisplayField>PROSAgreement__Agreement_Action_Status__c</errorDisplayField>
        <errorMessage>Agreement Action Status is not valid. 
Allowed Action Status: Start, Success and Failure.</errorMessage>
    </validationRules>
</CustomObject>